# openvino

inference-engine/include/: ie_iextension.h
inference-engine/samples/benchmark_app/: inputs_filling.cpp
inference-engine/samples/surface_use_case/: CMakeLists.txt  config.h  config.yaml  inputs_filling.cpp  inputs_filling.hpp  main.cpp  progress_bar.hpp  statistics_report.cpp  statistics_report.hpp  surface_use_case.hpp  utils.cpp  utils.hpp
inference-engine/samples/sycl_custom_layers/: CMakeLists.txt  main.cpp  ocl_ext.cpp  ocl_ext.hpp
inference-engine/samples/sycl_custom_layers/cmake/: FindSYCL.cmake
inference-engine/src/cldnn_engine/: CMakeLists.txt  cldnn_common_utils.h  cldnn_config.h  cldnn_engine.cpp  cldnn_engine.h  cldnn_executable_network.cpp  cldnn_executable_network.h  cldnn_graph.cpp  cldnn_graph.h  cldnn_infer_request.cpp  cldnn_program.cpp  cldnn_program.h  cldnn_remote_context.cpp  cldnn_remote_context.h
inference-engine/src/cldnn_engine/ops/: constant.cpp  ctc_greedy_decoder.cpp  gather.cpp  matmul.cpp  non_max_suppression.cpp  normalize_l2.cpp  pad.cpp  parameter.cpp  proposal.cpp  reduce.cpp  rnn.cpp  topk.cpp
inference-engine/tests/: CMakeLists.txt
inference-engine/tests/functional/plugin/gpu/: CMakeLists.txt
inference-engine/tests_deprecated/functional/: CMakeLists.txt
ngraph/python/: requirements_test.txt
src/: README.md
